Trying to fix the header-right sticking out

--- a/style.css
+++ b/style.css
@@ -31,9 +31,6 @@ main {
     margin: auto 1em;
 }
 
-.header-right {
-    padding-right: 2em;
-}
 
 .hamburger-menu {
     width: 6em;
@@ -70,7 +67,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin: 1em 1em 0 0;
+    margin: 1em 0 0 0;
+    padding-right: 2em;
 }
 
 
